# graphql-cascade

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONSOLIDATION_REPORT.md  CONTENT_INVENTORY.md  CONTRIBUTING.md  DUPLICATION_REPORT.md  LICENSE  LINK_VALIDATION_REPORT.md  MIGRATION_REPORT.md  PRE_RELEASE_CHECKLIST.md  QUALITY_REPORT.md  README.md  REPOSITORY_CLEANUP_PLAN.md  SECURITY.md  SETUP_COMPLETE.md  TARGET_STRUCTURE.md  VERSION_ALIGNMENT_CLEANUP.md  codecov.yml  graphql_cascade_implementation_plan.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  renovate.json  task.txt  task_backend.txt  task_frontend.txt  task_spec.txt  test-audit.md
.changeset/: config.json
.github/: PULL_REQUEST_TEMPLATE.md  WORKFLOW_OPTIMIZATIONS.md
.github/workflows/: auto-updates.yml  benchmark.yml  canary.yml  ci.yml  codeql.yml  compliance-tests.yml  release.yml  (+7 more)
.phases/: 00-master-plan.md  01-specification-excellence.md  02-multi-language-servers.md  03-client-ecosystem.md  04-performance-scalability.md  05-developer-experience.md  06-documentation-education.md  07-testing-quality.md  08-security-production.md  09-community-ecosystem.md  10-examples-showcases.md  README.md  phase-23-post-assessment-fixes.md
compliance-tests/: README.md  cli.py  setup.py
conformance-tests/: README.md  spec-version.json  test-case-schema.json
design/: README.md  adr-template.md  implementation-strategy.md
docs/: README.md  index.md  package-lock.json  package.json
examples/: README.md  contact_extended.yaml  schema_custom_actions.graphql  schema_many_to_many.graphql  schema_nested_entities.graphql  schema_simple_crud.graphql  server_apollo.ts  server_strawberry.py
integration-tests/: cascade.test.ts  jest.config.js  package-lock.json  package.json
pr-2-ci-fixes/: 00-master-plan.md  01-eslint-configuration.md  02-typescript-build-fixes.md  03-test-infrastructure.md  04-ci-cd-optimization.md
reference/: README.md  cascade_base.graphql
reference/server-python/: LICENSE  README.md  pyproject.toml
reference/server-python/graphql_cascade/: __init__.py  builder.py  config.py  errors.py  invalidator.py  middleware.py  tracker.py
reference/server-python/tests/: test_builder.py  test_errors.py  test_tracker.py
releases/: v0.3.0.md  v1.1.0.md
research/: PHASE_1_SUMMARY.md  README.md  apollo_analysis.md  cascade_value_proposition.md  comparison_matrix.md  other_protocols.md  relay_analysis.md  requirements.md
scripts/: README.md  generate_api_docs.sh  generate_toc.sh  publish.py  quality_report.sh  spellcheck.sh  test_automation.sh  test_docs_coverage.py  test_examples.sh  update_links.sh  validate_docs.py  validate_docs.sh  validate_structure.py  validate_structure.sh  verify-build.sh
specification/: 00_introduction.md  01_conformance.md  02_cascade_model.md  03_entity_identification.md  04_mutation_responses.md  05_invalidation.md  06_subscriptions.md  07_schema_conventions.md  08_directives.md  09_server_requirements.md  10_tracking_algorithm.md  11_invalidation_algorithm.md  12_performance_requirements.md  13_client_integration.md  14_optimistic_updates.md  15_conflict_resolution.md  16_security.md  17_performance.md  README.md  VERSIONING.md  executive_summary.md  grammar.ebnf
(+271 files in other folders)
